--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 
   <body>
     <!-- Bootstrap -->
-    <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
+	<script src="assets/js/plotly-1.54.0.min.js"></script>
+	<script src="assets/js/jquery-3.2.1.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 	<script defer src='build/bundle.js'></script>
