--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>Alignment Sandbox</title>
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="build/bundle.css" rel="stylesheet">
   </head>
 
   <body>
