--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Explore sequence alignment algorithms">
     <meta name="author" content="Robert Aboukhalil">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="assets/img/favicon.ico">
     <title>Alignment Sandbox</title>
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
