Hotfix: Add analytics

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,11 @@
 
   <body>
     <!-- Bootstrap -->
-	<script src="assets/js/plotly-1.54.0.min.js"></script>
-	<script src="assets/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="assets/js/plotly-1.54.0.min.js"></script>
+    <script src="assets/js/jquery-3.2.1.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-	<script defer src='build/bundle.js'></script>
+    <script defer src='build/bundle.js'></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "25757137ac414c399c26e2c1ec5d2ec8"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
